Replaced usage of Stream.collect(Collectors.toList()) with Stream.toList() in RoleService.java and removed unused Collectors Import